--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
   <h1>Pac-Man</h1>
+  
+  <div class="controls">
+    <button id="startBtn">Start Game</button>
+    <button id="stopBtn">Stop Game</button>
+  </div>
+  
+  <div class="scoreboard">
+    Score: <span id="score">0</span>
+  </div>
+  
   <canvas id="gameCanvas"></canvas>
   <script src="script.js"></script>
 </body>
